fix(analytics/tables): [PLTDA-2765] ticket fields values overlap (#4904)
* fix(analytics/tables): [PLTDA-2765] ticket fields values overlap

* fix(analytics/tables): [PLTDA-2765] percentage value in chromatic updates

--- a/src/pages/stats/GaugeAddon.less
+++ b/src/pages/stats/GaugeAddon.less
@@ -2,6 +2,7 @@
     .wrapper {
         position: relative;
         z-index: 0;
+        width: 100%;
     }
     .gaugeAddon {
         position: absolute;
