--- a/src/pages/stats/TruncateCellContent.less
+++ b/src/pages/stats/TruncateCellContent.less
@@ -6,6 +6,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         max-width: 100%;
+        width: 98%;
     }
 
     .truncate {
